--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "frontend",
+  "name": "crowdfunding-dapp",
   "version": "0.0.1",
+  "license": "MIT",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^0.8.1",
-    "ethers": "^5.7.0",
-    "next": "^13.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "wagmi": "~0.10.0"
+    "ethers": "^5.7.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^12.1.6",
     "typescript": "^4.6.4"
-  }
+  },
+  "engines": {
+    "node": "16.16.x",
+    "yarn": ">=1.22.11"
+  },
+  "packageManager": "yarn@1.22.19"
 }
