--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,7 +13,8 @@
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wagmi": "~0.10.0"
+    "wagmi": "~0.10.0",
+    "contracts": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
