--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "2.0.14",
+    "@chakra-ui/react": "2.4.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@next/font": "13.1.1",
     "@rainbow-me/rainbowkit": "^0.8.1",
+    "contracts": "*",
+    "framer-motion": "^8.0.2",
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wagmi": "~0.10.0",
-    "contracts": "*"
+    "react-icons": "^4.7.1",
+    "wagmi": "~0.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
