--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "contract:compile": "yarn workspace contracts compile",
     "contract:build": "yarn workspace contracts build",
-    "app:build": "yarn workspace app build",
+    "app:build": "pwd && yarn workspace app build",
     "postinstall": "yarn contract:compile && yarn contract:build"
   },
   "dependencies": {
